# Ticket-to-Ride-Route-Optimizer

./: .gitignore  .vercelignore  PLAN.md  README.md  main.py  package.json  pyproject.toml  requirements.txt  vercel.json
api/: index.py
backend/: index.py
data/archive/: tracks.txt
frontend/: next.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/components/: EdgeLegend.tsx  GameShell.tsx  MapBoard.tsx  Sidebar.tsx  SolveSummary.tsx  TripHand.tsx  TripPicker.tsx
frontend/lib/: api.ts  coords.ts  gameState.ts  staticBoard.ts  staticTrips.ts  types.ts
scripts/: seed_db.py  vercel_build.py
src/ttro/: __init__.py
src/ttro/api/: __init__.py  app.py  schemas.py
src/ttro/db/: __init__.py  connection.py  repository.py  schema.py
src/ttro/graph/: board.py
src/ttro/solver/: __init__.py  matrices.py  optimizer.py
src/ttro/static_site/: .gitkeep
src/ttro/viz/: __init__.py  visualize.py
