[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ttro"
version = "0.2.0"
description = "Ticket to Ride optimal trip solver"
requires-python = ">=3.10"
dependencies = [
    "networkx>=3.0",
    "numpy>=1.24",
    "fastapi>=0.110",
    "uvicorn>=0.27",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.vercel]
entrypoint = "api.index:app"

[tool.vercel.scripts]
build = "python scripts/vercel_build.py"
